Update Model EventHandler Unregister

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "> hero\n",
     "> - background blur (X)\n",
+    "> - bulletin\n",
     "> - text input props\n",
     "> - model: camera follow/rotation\n",
     "> - model: stop、 restart rendering button\n",
@@ -29,7 +30,7 @@
     "\n",
     "> toTop btn\n",
     "\n",
-    "> **JSON**、**SEO**\n",
+    "> **JSON**、**SEO**、**Domain Email**\n",
     "\n",
     "#### Note: **Change `srcPath` & `Domain`**"
    ]
