Add Hero Model Controls

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -5,32 +5,33 @@
    "metadata": {},
    "source": [
     "> menuhover\n",
-    "> - hover\n",
-    "> - indicator\n",
-    "> - (menubar-toggle-button)?\n",
-    "> - `About`, `Work`, `Contact`\n",
+    "> - [ ] hover\n",
+    "> - [ ] indicator\n",
+    "> - [ ] (menubar-toggle-button)?\n",
+    "> - [ ] `About`, `Work`, `Contact`\n",
     "\n",
     "> sidebar\n",
-    "> - darkmode default (O)\n",
+    "> - [O] darkmode default\n",
     "\n",
     "> section\n",
-    "> - switcher\n",
+    "> - [ ] switcher\n",
+    "> - [ ] Cards\n",
     "\n",
     "> hero\n",
-    "> - background blur (X)\n",
-    "> - bulletin\n",
-    "> - text input props\n",
-    "> - model: camera follow/rotation\n",
-    "> - model: stop、 restart rendering button\n",
-    "> - model: loading bar!!!\n",
-    "> - model: optimization (on&off seen or not)\n",
+    "> - [X] background blur\n",
+    "> - [ ] bulletin\n",
+    "> - [O] text input props\n",
+    "> - [O] model: camera follow/rotation\n",
+    "> - [O] model: stop、 restart rendering、lock button\n",
+    "> - [ ] model: loading bar!!!\n",
+    "> - [ ] model: optimization (on&off seen or not)\n",
     "\n",
-    "> footer ()\n",
-    "> - `TM、(C) Need License???`\n",
+    "> footer\n",
+    "> - [ ] `TM、(C) Need License???`\n",
     "\n",
-    "> toTop btn\n",
-    "\n",
-    "> **JSON**、**SEO**、**Domain Email**\n",
+    "> Others\n",
+    "> - [ ] toTop btn\n",
+    "> - [ ] **JSON**、**Language**、**SEO**、**Domain Email**\n",
     "\n",
     "#### Note: **Change `srcPath` & `Domain`**"
    ]
