Add Hero Model Loading Progress

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -23,7 +23,7 @@
     "> - [O] text input props\n",
     "> - [O] model: camera follow/rotation\n",
     "> - [O] model: stop、 restart rendering、lock button\n",
-    "> - [ ] model: loading bar!!!\n",
+    "> - [O] model: loading bar\n",
     "> - [ ] model: optimization (on&off seen or not)\n",
     "\n",
     "> footer\n",
