Update HeroSection intro element

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -19,8 +19,9 @@
     "\n",
     "> hero\n",
     "> - [X] background blur\n",
-    "> - [ ] bulletin\n",
+    "> - [X] bulletin\n",
     "> - [O] text input props\n",
+    "> - [O] About Content\n",
     "> - [O] model: camera follow/rotation\n",
     "> - [O] model: stop、 restart rendering、lock button\n",
     "> - [O] model: loading bar\n",
