Change GlobalComponents Include Path

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "> section\n",
     "> - [ ] switcher\n",
+    "> - [ ] typing effect\n",
     "> - [ ] Cards\n",
     "\n",
     "> hero\n",
@@ -31,6 +32,7 @@
     "> - [ ] `TM、(C) Need License???`\n",
     "\n",
     "> Others\n",
+    "> - [ ] pop up msg\n",
     "> - [ ] toTop btn\n",
     "> - [ ] **JSON**、**Language**、**SEO**、**Domain Email**\n",
     "\n",
