--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -16,7 +16,7 @@
     "> section\n",
     "> - [ ] switcher\n",
     "> - [ ] typing effect\n",
-    "> - [ ] Cards\n",
+    "> - [O] Cards (tilt)\n",
     "\n",
     "> hero\n",
     "> - [X] background blur\n",
