--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -19,6 +19,7 @@
     "> - [O] Cards (tilt)\n",
     "\n",
     "> hero\n",
+    "> - [O] small about link\n",
     "> - [X] background blur\n",
     "> - [X] bulletin\n",
     "> - [O] text input props\n",
