--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -17,6 +17,9 @@
     "> - [ ] switcher\n",
     "> - [ ] typing effect\n",
     "> - [O] Cards (tilt)\n",
+    "> - [ ] Swip Card (like dating software)\n",
+    "> - [O] geometry light\n",
+    "> - [ ] terminal\n",
     "\n",
     "> hero\n",
     "> - [O] small about link\n",
@@ -42,8 +45,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
