Update Vue Router Usage

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -34,7 +34,12 @@
     "\n",
     "> skills\n",
     "\n",
+    "> experience\n",
+    "> - CV download button\n",
+    "\n",
     "> testimonials\n",
+    "\n",
+    "> project work\n",
     "\n",
     "> footer\n",
     "> - [ ] `TM、(C) Need License???`\n",
