Finalize ExperienceSection and GlowCard Component

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -8,44 +8,48 @@
     "> - [ ] hover\n",
     "> - [ ] indicator\n",
     "> - [ ] (menubar-toggle-button)?\n",
-    "> - [ ] `About`, `Work`, `Contact`\n",
+    "> - [ ] `Home`, `Blog`, `Contact`\n",
     "\n",
     "> sidebar\n",
     "> - [O] darkmode default\n",
     "\n",
-    "> section\n",
-    "> - [ ] switcher\n",
-    "> - [ ] typing effect\n",
-    "> - [O] Cards (tilt)\n",
-    "> - [ ] Swip Card (like dating software)\n",
-    "> - [O] geometry light\n",
-    "> - [ ] terminal\n",
+    "* home page:\n",
+    "    > section\n",
+    "    > - [ ] switcher\n",
+    "    > - [ ] typing effect\n",
+    "    > - [O] Cards (tilt)\n",
+    "    > - [ ] Swip Card\n",
+    "    > - [O] geometry light\n",
+    "    > - [ ] terminal\n",
     "\n",
-    "> hero\n",
-    "> - [O] small about link\n",
-    "> - [X] background blur\n",
-    "> - [X] bulletin\n",
-    "> - [O] text input props\n",
-    "> - [O] About Content\n",
-    "> - [O] model: camera follow/rotation\n",
-    "> - [O] model: stop、 restart rendering、lock button\n",
-    "> - [O] model: loading bar\n",
-    "> - [ ] model: optimization (on&off seen or not)\n",
+    "    > hero\n",
+    "    > - [O] small about link\n",
+    "    > - [X] background blur\n",
+    "    > - [X] bulletin\n",
+    "    > - [O] text input props\n",
+    "    > - [O] About Content\n",
+    "    > - [O] model: camera follow/rotation\n",
+    "    > - [O] model: stop、 restart rendering、lock button\n",
+    "    > - [O] model: loading bar\n",
+    "    > - [ ] model: optimization (on&off seen)\n",
     "\n",
-    "> skills\n",
+    "    > skills\n",
+    "    > - [O] showcase\n",
     "\n",
-    "> experience\n",
-    "> - CV download button\n",
+    "    > experience\n",
+    "    > - [ ] CV download button\n",
+    "    > - [ ] grid => img + title + content + link\n",
+    "    > - [ ] motion\n",
     "\n",
-    "> testimonials\n",
+    "    > testimonials\n",
     "\n",
-    "> project work\n",
+    "    > project work\n",
     "\n",
     "> footer\n",
-    "> - [ ] `TM、(C) Need License???`\n",
+    "> - [O] `TM、(C)`\n",
     "\n",
     "> Others\n",
-    "> - [ ] pop up msg\n",
+    "> - [ ] pop up msg (toast notification)\n",
     "> - [ ] toTop btn\n",
     "> - [ ] **JSON**、**Language**、**SEO**、**Domain Email**\n",
     "\n",
