Add Section Navigator Component

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -8,15 +8,16 @@
     "> - [ ] hover\n",
     "> - [ ] indicator\n",
     "> - [ ] (menubar-toggle-button)?\n",
-    "> - [ ] `Home`, `Blog`, `Contact`\n",
+    "> - [ ] search function\n",
+    "> - [ ] `Home`, `Blog`, `Contact` (`About`, `Profolio`, ...)\n",
     "\n",
     "> sidebar\n",
     "> - [O] darkmode default\n",
     "\n",
     "* home page:\n",
     "    > section\n",
-    "    > - [ ] switcher\n",
-    "    > - [ ] typing effect\n",
+    "    > - [O] section switcher\n",
+    "    > - [O] typing effect\n",
     "    > - [O] Cards (tilt)\n",
     "    > - [ ] Swip Card\n",
     "    > - [O] geometry light\n",
@@ -37,9 +38,9 @@
     "    > - [O] showcase\n",
     "\n",
     "    > experience\n",
-    "    > - [ ] CV download button\n",
-    "    > - [ ] grid => img + title + content + link\n",
-    "    > - [ ] motion\n",
+    "    > - [O] CV download button\n",
+    "    > - [O] grid => img + title + content + link\n",
+    "    > - [X] motion\n",
     "\n",
     "    > testimonials\n",
     "\n",
