Update Simple ContactPage

--- a/test_area/note.ipynb
+++ b/test_area/note.ipynb
@@ -50,8 +50,8 @@
     "> - [O] `TM、(C)`\n",
     "\n",
     "> Others\n",
-    "> - [ ] pop up msg (toast notification)\n",
-    "> - [ ] toTop btn\n",
+    "> - [ ] toast notification\n",
+    "> - [O] toTop btn\n",
     "> - [ ] **JSON**、**Language**、**SEO**、**Domain Email**\n",
     "\n",
     "#### Note: **Change `srcPath` & `Domain`**"
